--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.16",
     "@types/react": "^18.0.28",
+    "@types/react-csv": "^1.1.3",
     "@types/react-dom": "^18.0.11",
     "@types/react-redux": "^7.1.25",
     "antd": "^5.3.1",
@@ -19,6 +20,7 @@
     "firebase": "^9.18.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
